kubernetes/apps/observability/exporters/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  namespace: observability
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["blackbox-exporter.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
